--- a/client/index.html
+++ b/client/index.html
@@ -35,7 +35,7 @@
 
         function sendToken(token) {
             var xhr = new XMLHttpRequest();
-            xhr.open('POST', 'http://localhost:3000/tokensignin');
+            xhr.open('POST', 'http://localhost:3000/auth/tokensignin');
             xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
             xhr.onload = function() {
                 console.log('Signed in as: ' + xhr.responseText);
